--- a/1-the-basics/AnnieBasicExc1.html
+++ b/1-the-basics/AnnieBasicExc1.html
@@ -27,9 +27,9 @@
         <br>is most important procces than result</p>    
         <p>My lovely <strong> cat </strong> is called Tut</p>
         <p> <strong> Federer </strong> is the best tennis player ever </p>
-        <img heiht = " 200" width = "200" src ="images/firefox-icon.png  " alt = "My own test">
-        https://www.tennisworldes.com/imgs/32674/roger-federer-hace-historia-como-el-primer-jugador-con-750-semanas-en-el-top-3.jpg
-        <a href = "https://www.facebook.com/BiviAnneBiviAnne"> My Personal Facebook </a>
+        <img heiht="200" width ="200" src ="https://www.thejewelleryeditor.com/media/images_thumbnails/filer_public_thumbnails/filer_public/7f/ee/7fee4648-a044-4730-b567-32b070aacaac/roger-federer.jpg__1536x0_q75_crop-scale_subsampling-2_upscale-false.jpg" alt = "Roger, The Only One" title="Roger Federer, Australian Open">
+        <br></br>
+        <a href = "https://www.facebook.com/BiviAnneBiviAnne">My Personal Facebook </a>
     </body>
 
 </html>    
