file updated ex1

--- a/1-the-basics/AnnieBasicExercise1.html
+++ b/1-the-basics/AnnieBasicExercise1.html
@@ -13,7 +13,7 @@
             <li>Taking pictures</li>
             <li>Spending time with my loves ones, it means my family and friends</li>
         </ul>
-            <img heiht = " 100" width = "100" src = "./Roger.jpg" alt = "Roger, the best one">
+            <img heiht = " 100" width = "100" src = "./Roger1.jpg" alt = "Roger, the best one">
         <h2>HTML TUTORIAL My Second Test inOrder</h2>
         <ol>
             <li>Family Time</li>
